remove DB resources

--- a/src/main/resources/lostriver_config.properties
+++ b/src/main/resources/lostriver_config.properties
@@ -44,4 +44,4 @@ cookie.default.expire = 31556926
 cookie.eternal.expire = 315360000
 
 # The cookie key of remember-me for Lostriver #change_it_first
-cookie.remember.me.lostriver.key = HRB
+cookie.remember.me.lostriver.key = LRV
