--- a/src/main/resources/lostriver_message.properties
+++ b/src/main/resources/lostriver_message.properties
@@ -86,9 +86,8 @@ errors.app.double.submit.request=double submit might be requested
 
 
 # ========================================================================================
-#                                                                                  Sign up
+#                                                                                  Xxxxxxx
 #                                                                                  =======
-errors.signup.account.already.exists=the account already exists so input others
 errors.xxxxxxxxxxxxxx=the {1} already {0} so input others
 errors.yyyyyyyyyyyyyy=the {1} already {4} so input others
 
