--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 	<version>1.0.0-SNAPSHOT</version>
 	<packaging>war</packaging>
 
-	<name>Harbor</name>
+	<name>Lostriver</name>
 	<description>example project for LastaFlute as single project (with H2)</description>
 	<url>http://dbflute.org/lastaflute</url>
 	<inceptionYear>2015</inceptionYear>
@@ -222,7 +222,7 @@
 					</webResources>
 					<archive>
 						<manifest>
-							<mainClass>org.docksidestage.HarborBoot</mainClass>
+							<mainClass>org.docksidestage.LostriverBoot</mainClass>
 						</manifest>
 					</archive>
 				</configuration>
