--- a/pom.xml
+++ b/pom.xml
@@ -247,7 +247,7 @@
 		<!-- = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = -->
 		<!--                                                                Main Framework -->
 		<!--                                                                 = = = = = = = -->
-		<!-- dbflute -->
+		<!-- DBFlute -->
 		<dependency>
 			<groupId>org.dbflute</groupId>
 			<artifactId>dbflute-runtime</artifactId>
@@ -260,7 +260,7 @@
 			<scope>runtime</scope>
 		</dependency>
 
-		<!-- lastaflute -->
+		<!-- LastaFlute -->
 		<dependency>
 			<groupId>org.lastaflute</groupId>
 			<artifactId>lastaflute</artifactId>
@@ -295,8 +295,6 @@
 			<artifactId>javax.servlet-api</artifactId>
 			<version>${servlet.version}</version>
 		</dependency>
-
-		<!-- boot -->
 		<dependency>
 			<groupId>org.dbflute.jetty</groupId>
 			<artifactId>jetty-boot</artifactId>
