--- a/src/main/resources/lostriver_message.properties
+++ b/src/main/resources/lostriver_message.properties
@@ -86,8 +86,14 @@ errors.app.double.submit.request=double submit might be requested
 
 
 # ========================================================================================
-#                                                                                  Xxxxxxx
-#                                                                                  =======
-errors.xxxxxxxxxxxxxx=the {1} already {0} so input others
-errors.yyyyyyyyyyyyyy=the {1} already {4} so input others
+#                                                                               Sea Mystic
+#                                                                               ==========
+
+
+
+# ========================================================================================
+#                                                                              Land Oneman
+#                                                                              ===========
+
+
 
