--- a/pom.xml
+++ b/pom.xml
@@ -16,21 +16,21 @@
 		<!-- Main Framework -->
 		<dbflute.version>1.2.8</dbflute.version>
 		<h2.jdbc.version>1.4.200</h2.jdbc.version>
-		<lastaflute.version>1.2.7</lastaflute.version>
+		<lastaflute.version>2.0.0-C-SNAPSHOT</lastaflute.version> <!-- #jakarta -->
 
 		<!-- Partner Library -->
 		<slf4j.version>1.7.36</slf4j.version>
 		<logback.version>1.2.13</logback.version>
-		<servlet.version>4.0.1</servlet.version>
-		<tomcat.boot.version>0.8.5</tomcat.boot.version>
+		<servlet.version>6.0.0</servlet.version> <!-- #jakarta -->
+		<tomcat.boot.version>2.0.0-A-SNAPSHOT</tomcat.boot.version> <!-- #jakarta -->
 
 		<!-- GoodNeighbor Library -->
 		<commons.lang.version>3.8.1</commons.lang.version>
-		<commons.fileupload.version>1.5</commons.fileupload.version>
+		<commons.fileupload.version>2.0.0-M2</commons.fileupload.version> <!-- #jakarta -->
 
 		<!-- Testing -->
 		<junit.version>4.8.2</junit.version> <!-- is latest version without hamcrest -->
-		<utflute.version>0.9.8</utflute.version>
+		<utflute.version>2.0.0-B-SNAPSHOT</utflute.version> <!-- #jakarta -->
 	</properties>
 
 	<licenses>
@@ -62,8 +62,8 @@
 					<artifactId>maven-compiler-plugin</artifactId>
 					<version>3.8.1</version>
 					<configuration>
-						<source>1.8</source>
-						<target>1.8</target>
+						<source>21</source>
+						<target>21</target>
 						<encoding>UTF-8</encoding>
 					</configuration>
 				</plugin>
@@ -283,9 +283,9 @@
 		<!--                                                               = = = = = = = = -->
 		<!-- transaction -->
 		<dependency>
-			<groupId>javax.transaction</groupId>
-			<artifactId>javax.transaction-api</artifactId>
-			<version>1.2</version>
+			<groupId>jakarta.transaction</groupId> <!-- #jakarta -->
+			<artifactId>jakarta.transaction-api</artifactId> <!-- #jakarta -->
+			<version>2.0.1</version>
 		</dependency>
 
 		<!-- logging -->
@@ -302,9 +302,10 @@
 
 		<!-- servlet -->
 		<dependency>
-			<groupId>javax.servlet</groupId>
-			<artifactId>javax.servlet-api</artifactId>
+			<groupId>jakarta.servlet</groupId> <!-- #jakarta -->
+			<artifactId>jakarta.servlet-api</artifactId> <!-- #jakarta -->
 			<version>${servlet.version}</version>
+			<scope>provided</scope> <!-- existing in jetty/tomcat -->
 		</dependency>
 		<dependency>
 			<groupId>org.dbflute.tomcat</groupId>
@@ -322,8 +323,8 @@
 			<version>${commons.lang.version}</version>
 		</dependency>
 		<dependency> <!-- used for multipart request -->
-			<groupId>commons-fileupload</groupId>
-			<artifactId>commons-fileupload</artifactId>
+			<groupId>org.apache.commons</groupId> <!-- #jakarta -->
+			<artifactId>commons-fileupload2-jakarta-servlet6</artifactId> <!-- #jakarta -->
 			<version>${commons.fileupload.version}</version>
 		</dependency>
 
