add jakarta.annotation-api explicitly (and refactor comments)

--- a/pom.xml
+++ b/pom.xml
@@ -282,10 +282,18 @@
 		<!--                                                               Partner Library -->
 		<!--                                                               = = = = = = = = -->
 		<!-- transaction -->
-		<dependency>
+		<dependency> <!-- Lasta Di uses e.g. TransactionManager -->
 			<groupId>jakarta.transaction</groupId> <!-- #jakarta -->
-			<artifactId>jakarta.transaction-api</artifactId> <!-- #jakarta -->
+			<artifactId>jakarta.transaction-api</artifactId>
 			<version>2.0.1</version>
+		</dependency>
+
+		<!-- annotation -->
+		<dependency> <!-- Lasta Di uses e.g. @Resource -->
+			<groupId>jakarta.annotation</groupId> <!-- #jakarta -->
+			<artifactId>jakarta.annotation-api</artifactId>
+			<version>2.1.1</version>
+			<scope>provided</scope> <!-- existing in jetty/tomcat -->
 		</dependency>
 
 		<!-- logging -->
@@ -303,7 +311,7 @@
 		<!-- servlet -->
 		<dependency>
 			<groupId>jakarta.servlet</groupId> <!-- #jakarta -->
-			<artifactId>jakarta.servlet-api</artifactId> <!-- #jakarta -->
+			<artifactId>jakarta.servlet-api</artifactId>
 			<version>${servlet.version}</version>
 			<scope>provided</scope> <!-- existing in jetty/tomcat -->
 		</dependency>
@@ -324,7 +332,7 @@
 		</dependency>
 		<dependency> <!-- used for multipart request -->
 			<groupId>org.apache.commons</groupId> <!-- #jakarta -->
-			<artifactId>commons-fileupload2-jakarta-servlet6</artifactId> <!-- #jakarta -->
+			<artifactId>commons-fileupload2-jakarta-servlet6</artifactId>
 			<version>${commons.fileupload.version}</version>
 		</dependency>
 
